--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ html {
 body {
   position: relative;
   width: 100%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', Helvetica, sans-serif;
   font-style: normal;
   line-height: 1.5;
   font-weight: 400;
