--- a/styles/style.css
+++ b/styles/style.css
@@ -28,3 +28,197 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+figure {
+  padding: 0;
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.visually-hidden:not(:focus):not(:active),
+.check-box input[type="checkbox"],
+.radio input[type="radio"] {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  border: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+}
+
+/* h1 {
+
+}
+
+h2 {
+
+}
+
+h3 {
+
+} */
+
+p {
+  padding: 0;
+  margin: 0;
+}
+
+:root {
+  --color-primary: #fea424;
+  --color-dark: #171717;
+  --color-light: #ffffff;
+}
+
+.container {
+  width: 100%;
+  max-width: 900px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+.page__container {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.page__columns {
+  display: flex;
+  flex-direction: column;
+}
+
+.page__column_type_secondary {
+  order: 1;
+}
+
+@media screen and (min-width: 451px) {
+  .page__columns {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .page__column_type_main {
+    flex-basis: 65%;
+  }
+
+  .page__column_type_secondary {
+    flex-basis: 30%;
+  }
+}
+
+.page__main {
+  margin-bottom: 30px;
+}
+
+.nav__list,
+/* .contacts__list, */
+/* .skills__list, */
+
+/* .experience__list, */
+/* .education__list, */
+/* .languages__list, */
+.footer__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.example__code {
+  word-break: break-all;
+}
+
+.nav__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: -10px;
+}
+
+.nav__item:not(:last-child) {
+  margin-right: 15px;
+}
+
+.nav__link {
+  display: block;
+  padding: 10px;
+}
+
+.cases__holder {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.cases__col {
+  flex-basis: 47%;
+}
+
+.case {
+  display: flex;
+  flex-direction: column;
+}
+
+.case__title {
+  order: 1;
+}
+
+.case__img {
+  max-width: 100%;
+}
+
+.logo__figure {
+  display: block;
+  width: 100%;
+  max-width: 260px;
+}
+
+/* @media screen and (min-width: 321px) {
+
+} */
+
+.logo__img {
+  display: block;
+  border-radius: 50%;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.logo__figcaption {
+  text-align: center;
+  margin-top: 15px;
+}
+
+.footer__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-left: -10px;
+}
+
+.footer__item:not(:last-child) {
+  margin-right: 15px;
+}
+
+.footer__link,
+.footer__text {
+  display: block;
+  padding: 10px;
+}
+
+.footer_img {
+  display: block;
+}
