--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,8 @@
   --color-grey: #f6f6f6;
   --color-grey-border: #f0f0f0;
   --color-block-shadow: #262626;
+  --color-sepia: rgba(254, 164, 36, 0.45);
+  --color-transparent: rgba(0, 0, 0, 0);
 }
 
 html {
@@ -25,17 +27,17 @@ html {
 body {
   position: relative;
   width: 100%;
-  font-family: "Poppins", Helvetica, sans-serif;
+  font-family: "Poppins", "Helvetica", sans-serif;
   font-style: normal;
   line-height: 1.5;
   font-weight: 400;
   color: var(--color-dark);
   padding: 0;
   margin: 0;
-  background-color: #ffffff;
+  background-color: var(--color-light);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: var(--color-transparent);
 }
 
 a {
@@ -100,7 +102,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.125rem;
+  font-size: 1.13rem;
   line-height: 1.3;
   margin: 0;
 }
@@ -143,7 +145,7 @@ p {
 .link {
   color: inherit;
   text-decoration: none;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid var(--color-dark);
 }
 
 .link:hover,
@@ -217,9 +219,6 @@ p {
 .columns__col_type_primary {
   background-color: var(--color-grey);
   order: 1;
-}
-
-.columns__col_type_primary {
   padding-top: 70px;
 }
 
@@ -236,10 +235,6 @@ p {
   .columns__col_type_primary,
   .columns__col_type_secondary {
     padding-top: 130px;
-  }
-
-  .columns__col_type_primary,
-  .columns__col_type_secondary {
     padding-bottom: 60px;
   }
 }
@@ -381,7 +376,7 @@ p {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(254, 164, 36, 0.45);
+  background-color: var(--color-sepia);
   transition: background-color 0.2s ease-in-out;
 }
 
@@ -390,7 +385,7 @@ p {
 }
 
 .case__link:hover .case__figure picture::after {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: var(-color-transparent);
 }
 
 .logo__figure {
