--- a/styles/style.css
+++ b/styles/style.css
@@ -79,7 +79,7 @@ code {
   overflow: hidden;
   white-space: nowrap;
   border: 0;
-  clip: rect(0 0 0 0);
+  clip: rect(0, 0, 0, 0);
   clip-path: inset(100%);
 }
 
@@ -122,7 +122,7 @@ p {
     overflow: hidden;
     white-space: nowrap;
     border: 0;
-    clip: rect(0 0 0 0);
+    clip: rect(0, 0, 0, 0);
     clip-path: inset(100%);
   }
 }
@@ -137,7 +137,7 @@ p {
     overflow: hidden;
     white-space: nowrap;
     border: 0;
-    clip: rect(0 0 0 0);
+    clip: rect(0, 0, 0, 0);
     clip-path: inset(100%);
   }
 }
